third_year/programming_languages_and_paradigms/project_2/PL-version/examples/bad/niezgodne-typy-1.hml
if true so 17
otherwise []